SubBt/force-app/main/default/objects/Folder__c/Folder__c.object-meta.xml
<CustomObject>
    <description>Folders created by all users. After creating Bucket on Amazon server we will created folder for that bucket in our org. So later we can use to display in grid or tree.</description>
    <label>Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>