SubBt/force-app/main/default/objects/Folder__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Salesforce Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public Download Only</fullName>
            </value>
            <value>
                <fullName>Public Download &amp; Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>