SubBt/force-app/main/default/objects/Folder__c/fields/Amazon_File_Key__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Key__c</fullName>
    <description>Amazon Folder Path. Used to prepare Amazon File Key.</description>
    <label>Amazon File Key</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>