SubBt/force-app/main/default/objects/Folder__c/fields/Amazon_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Path__c</fullName>
    <description>Salesforce path for folder hierarchy.</description>
    <label>Salesforce File Path</label>
    <type>TextArea</type>
</CustomField>