SubBt/force-app/main/default/objects/Folder__c/fields/Amazon_File_Path_With_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Path_With_Bucket__c</fullName>
    <formula>IF(ISBLANK(Bucket_Name__c),&apos;&apos;, Bucket_Name__c&amp;&quot;/&quot;) &amp; IF(ISBLANK(Amazon_File_Path__c),  Salesforce_Unique_Number__c , Amazon_File_Path__c)</formula>
    <label>Salesforce File Path With Bucket</label>
    <type>Text</type>
</CustomField>