SubBt/force-app/main/default/objects/Folder__c/fields/Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Name__c</fullName>
    <description>Amazon bucket name</description>
    <label>Bucket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>