SubBt/force-app/main/default/objects/Folder__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipLabel>Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>