SubBt/force-app/main/default/objects/Folder__c/fields/External_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Folder_Name__c</fullName>
    <description>Amazon Folder Name.</description>
    <label>External Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>