SubBt/force-app/main/default/objects/Folder__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the amazon server where file is placed.</description>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>