SubBt/force-app/main/default/objects/Folder__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent folder</description>
    <label>Parent</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>