SubBt/force-app/main/default/objects/Folder__c/fields/Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API_Name__c</fullName>
    <description>API Name of parent object.</description>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>