SubBt/force-app/main/default/objects/Folder__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>