SubBt/force-app/main/default/objects/Folder__c/fields/Salesforce_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Unique_Number__c</fullName>
    <description>Unique Number generated for Folder by Salesforce.</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Salesforce Unique Number</label>
    <type>AutoNumber</type>
</CustomField>