SubBt/force-app/main/default/objects/Folder__c/fields/Source_Folder__c.field-meta.xml
<CustomField>
    <fullName>Source_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Folder</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>