SubBt/force-app/main/default/objects/Folder__c/fields/Spec__c.field-meta.xml
<CustomField>
    <fullName>Spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec</label>
    <referenceTo>Spec__c</referenceTo>
    <relationshipName>BT_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>