SubBt/force-app/main/default/objects/Folder__c/fields/Submittal__c.field-meta.xml
<CustomField>
    <fullName>Submittal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submittal</label>
    <referenceTo>Submittal__c</referenceTo>
    <relationshipName>BT_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>