SubBt/force-app/main/default/objects/Folder__c/validationRules/Bucket_Name_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bucket_Name_Change_Validation</fullName>
    <active>true</active>
    <description>You cannot change name of bucket. You have to create new bucket from System Configration page. Contact your System Admin.</description>
    <errorConditionFormula>AND( ISCHANGED( Name ) , ISBLANK( Parent__c ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change name of bucket. You have to create new bucket from System Configration page. Contact your System Admin.</errorMessage>
</ValidationRule>